style.css
html {
  scroll-behavior: smooth;
  background-color: #91B3BC;
  color: #dbd7ca;
  font-family: 'Space Mono', monospace;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

html::-webkit-scrollbar {
  width: 0.5vw;
}

html::-webkit-scrollbar-thumb {
  background-color: #C5D6FF;
}

html::-webkit-scrollbar-thumb:hover {
  background-color: #C5D6FF;
}

html::-webkit-scrollbar-track {
  background-color: #5555;
}

html::-webkit-scrollbar-track:hover {
  background-color: #5555;
}

/* CSS for the custom font */
@font-face {
  font-family: 'SpaceMono';
  src: url("SpaceMono-Bold.ttf");
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
}

section {
  max-width: 60%;
}

header {
  position: sticky;
  top: 0;
  padding: 0 2rem;
  background-color: #86aeb9;
  border-bottom: 2px solid #8eb0bb;
  z-index: 100;
}

.navbar {
  max-width: 100%;
  min-height: 60px;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.navbar .links {
  display: flex;
  gap: 2rem;
}

/* Logo styles */
.navbar .rat {
  object-fit: cover;
  height: 4rem;
  width: 4rem;
}

.navbar .toggle_btn {
  color: #F1EDE1;
  cursor: pointer;
  display: none;
}

.action_btn {
  background-color: #97b5bd;
  border: 2px solid #8bafb9;
  color: #F1EDE1;
  padding: 0.5rem 1rem;
  outline: none;
  border-radius: 20px;
  font-size: 0.8rem;
  font-weight: bold;
  cursor: pointer;
  transition: scale 0.2 ease;
}

.action_btn:hover {
  scale: 1.05;
  color: #F1EDE1;
}

.action_btn:active {
  scale: 0.90;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  font-size: 1rem;
  color: #F1EDE1;
}

/* Global link styles */
a:hover {
  color: #cfc8b0;
}

.dropdown_menu {
  display: none;
  width: 100%;
  height: 0;
  background: #91B3BC;
  backdrop-filter: blur(15px);
  border-radius: 10px;
  overflow: hidden;
  transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown_menu.open {
  height: 180px;
}

.dropdown_menu li {
  padding: 0.7rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dropdown_menu .action_btn {
  width: 80%;
  display: flex;
  padding: 0;
  margin-left: 2.2rem;
  font-size: 1rem;
  justify-content: center;
}

.frontpage {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.start {
  display: flex;
  flex-direction: column;
  max-width: 50%;
  margin-top: 3rem;
}

.hi {
  margin-top: 4rem;
  text-align: left;
  font-size: 3rem;
}

.story {
  text-align: left;
  font-size: 1.5rem;
}

.me {
  margin-top: 3rem;
  margin-left: 8rem;
  transform: translateX(-3rem);
  border: 0.2rem solid #b3d6cd;
  border-radius: 29% 71% 52% 48% / 49% 61% 39% 51%;
  transition: border-radius 750ms ease-in-out;
}

.me:hover {
  border-radius: 54% 46% 31% 69% / 36% 61% 39% 64%;
}

.medias {
  position: absolute;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  transform: translate(25rem, -15rem);
}

#mob1 {
  display: none;
}

#mob2 {
  display: none;
}

.frontpage i {
  color: #cfc5c5;
  font-size: 1.5rem;
}

.frontpage i:hover {
  animation: bounce 1s;
}

@keyframes bounce {

  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }

  40% {
    transform: translateY(-15px);
  }

  60% {
    transform: translateY(-8px);
  }
}


/* about section */
.single-blog {
  min-width: 23rem;
  max-width: 25rem;
  transition: all 0.30s ease 0s;
}

.single-blog:hover {
  transform: translateY(-10px);
}

.single-blog .post-img {
  position: relative;
}

.single-blog .post-img img {
  width: 100%;
  object-fit: cover;
  border-radius: 1rem;
}

.single-blog .post-img:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0;
  border-radius: 1rem;
  background: rgba(81, 157, 187, 0.6);
  transition: all 0.30s ease 0s;
}

.single-blog:hover .post-img:after {
  opacity: 1;
}

.single-blog .single_blog {
  border-top: none;
  padding: 25px 20px 25px;
  position: relative;
}

.post-title {
  text-align: center;
  display: flex;
  justify-content: center;
  font-size: 20px;
  text-transform: capitalize;
  transition: all 0.3s ease 0s;
}

.single-blog .blog-text {
  text-align: center;
  font-size: 15px;
  line-height: 23px;
  margin: 7px 0 10px;
}

.owl-carousel .item {
  text-align: center;
}

.owl-carousel .nav-button {
  transform: scale(2);
  height: 50px;
  width: 25px;
  cursor: pointer;
  position: absolute;
  top: 200px !important;
}

.owl-carousel .owl-prev.disabled,
.owl-carousel .owl-next.disabled {
  pointer-events: none;
  opacity: 0.25;
}

.owl-carousel .owl-prev {
  left: -20px;
}

.owl-carousel .owl-next {
  right: -35px;
}

h1 {
  font-size: 2rem;
}

.tools{
  margin-left: 7.7rem;
  padding:1rem;
  gap:1rem;
  font-size: 5rem;
  color: #FFFFFF;
  max-width: 70%
}

.tool{
  transform: translate(0rem, 1.2rem);
  height:auto;
  max-width: 5rem;
}

/* Media Query for Laptops and Desktops */
@media (min-width: 1025px) and (max-width: 1280px) {
  section {
    max-width: 75%;
  }

  .frontpage {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .start {
    display: flex;
    flex-direction: column;
    margin-top: 3rem;
    transform: translateX(1rem);
  }

  .hi {
    margin-top: 4rem;
    text-align: left;
    font-size: 3rem;
    width: 23rem;
  }

  .story {
    text-align: left;
    font-size: 1.5rem;
  }

  .me {
    margin-top: 3rem;
    border: 0.2rem solid #b3d6cd;
    border-radius: 29% 71% 52% 48% / 49% 61% 39% 51%;
    transition: border-radius 750ms ease-in-out;
  }

}

/* Media Query for Tablets Ipads portrait mode */

@media (min-width: 768px) and (max-width: 1024px) {
  section {
    max-width: 70%;
  }

  .frontpage {
    display: flex;
    flex-direction: row;
    margin-bottom: -5rem;
  }


  .start {
    transform: translateY(-10%);
    display: flex;
    flex-direction: column;
    margin-top: 3rem;
  }

  .hi {
    margin-top: 4rem;
    text-align: center;
    font-size: 3rem;
  }

  .story {
    text-align: center;
    font-size: 1.5rem;
  }

  .me {
    transform: translateY(10%);
    margin-top: 3rem;
    margin-left: 5rem;
    border: 0.2rem solid #b3d6cd;
    border-radius: 29% 71% 52% 48% / 49% 61% 39% 51%;
    transition: border-radius 500ms ease-in-out;
    max-width: 20rem;
  }

  .me:hover {
    border-radius: 54% 46% 31% 69% / 36% 61% 39% 64%;
  }

  .medias {
    position: absolute;
    display: flex;
    flex-direction: column;
    gap: 3rem;
    transform: translate(25rem, -13rem);
  }

  .tools{
    margin-left: 1.2rem;
    padding:1rem;
    font-size: 5rem;
    color: #FFFFFF;
    max-width: 90%
  }
  
}

/* Media Query for low resolution  Tablets, Ipads */
@media (min-width: 481px) and (max-width: 767px) {

  .navbar .links,
  .navbar .action_btn {
    display: none;
  }

  .navbar .toggle_btn {
    display: block;
    font-size: 2rem;
  }

  .navbar {
    max-width: 100%;
    min-height: 60px;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-around;
    gap: 15rem;
  }

  .rat {
    margin-left: -1rem;
  }

  .dropdown_menu {
    display: block;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
  }

  section {
    max-width: 90%;
  }

  .frontpage {
    margin-top: -10rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 3rem;
  }

  .start {
    display: flex;
    flex-direction: column;
    transform: translateY(100%);
  }

  .sam {
    transform: translateY(-80%);
  }

  .me {
    max-width: 12rem;
    margin: auto;
    transform: translateX(0);
  }

  .medias {
    display: none;
  }

  #mob1 {
    display: inline;
  }

  #mob2 {
    display: inline;
  }

  .start {
    max-width: 90%;
  }

  .hi {
    text-align: center;
    font-size: 2.8rem;
  }

  .story {
    text-align: center;
    font-size: 1.5rem;
  }

  .single-blog {
    min-width: 22rem;
    max-width: 23rem;
    transition: all 0.30s ease 0s;
  }

  .tools{
    margin-left: 1.2rem;
    padding:1rem;
    font-size: 5rem;
    color: #FFFFFF;
    max-width: 90%
  }
}

/* Media Query for Mobile Devices */
@media (max-width: 480px) {

  .navbar .links,
  .navbar .action_btn {
    display: none;
  }

  .navbar .toggle_btn {
    display: block;
    font-size: 2rem;
  }

  .navbar {
    max-width: 100%;
    min-height: 60px;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-around;
    gap: 15rem;
  }

  .rat {
    margin-left: -1rem;
  }

  .dropdown_menu {
    display: block;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
  }

  section {
    max-width: 90%;
  }

  .frontpage {
    margin-top: -4rem;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .start {
    display: flex;
    flex-direction: column;
    transform: translateY(100%);
  }

  .sam {
    transform: translateY(-80%);
  }

  .me {
    max-width: 12rem;
    margin: auto;
    transform: translateX(0);
  }

  .medias {
    display: none;
  }

  #mob1 {
    display: inline;
  }

  #mob2 {
    display: inline;
  }

  .start {
    max-width: 90%;
  }

  .hi {
    text-align: center;
    font-size: 2rem;
  }

  .story {
    text-align: center;
    font-size: 1rem;
  }

  .single-blog {
    min-width: 20rem;
    max-width: 22rem;
    transition: all 0.30s ease 0s;
  }

  h1 {
    font-size: 1.75rem;
  }

  h2{
    font-size: 1.5rem;
  }

  .tools{
    margin-left: .7rem;
    padding:1rem;
    font-size: 5rem;
    color: #FFFFFF;
    max-width: 80%
  }

  .tool{
    transform: translate(0rem, 1rem);
  }

}

